--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="brand-underline"></div>
       </div>
       <div class="row auth-actions">
-        <button id="btnLogin">Giriş yap</button>
+        <button id="btnLogin">Giriş yapmama</button>
         <button class="ghost" id="btnSignup">Üye ol</button>
       </div>
     </div>
