--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <header class="card pad">
     <div class="between">
       <div>
-        <div class="brand" id="brandTitle">KANTANZA</div>
+        <div class="brand" id="brandTitle">KArdeşlik</div>
         <div class="brand-underline"></div>
       </div>
       <div class="row auth-actions">
