--- a/index.html
+++ b/index.html
@@ -254,20 +254,30 @@
           </div>
         </div>
 
-        <!-- Müzik Bölümü: YouTube arka planda -->
-        <div class="card pad">
-          <h3>Müzik (arka planda)</h3>
-          <p>Seçili: 3 Saat Dinlendirici Müzik</p>
-          <div class="row" style="margin-top:8px;justify-content:space-between">
-            <button id="btnPlayRadio">Oynat</button>
-            <button id="btnStopRadio" class="ghost">Durdur</button>
-          </div>
-          <div style="margin-top:8px;color:var(--muted);font-size:12px">
-            Not: Tarayıcı otomatik oynatmayı kısıtlayabilir; eğer otomatik başlamazsa Oynat butonuna bas.
-          </div>
-          <!-- Gizli YouTube iframe konumu (JS ile oluşturuluyor). -->
-          <div id="ytContainer" style="display:none"></div>
-        </div>
+       <!-- Müzik Bölümü: YouTube arka planda -->
+<div class="card pad">
+  <h3>Müzik (arka planda)</h3>
+  <p>Seçili: 3 Saat Dinlendirici Müzik</p>
+  <div class="row" style="margin-top:8px;justify-content:space-between">
+    <button id="btnPlayRadio">Oynat</button>
+    <button id="btnStopRadio" class="ghost">Durdur</button>
+  </div>
+  <div style="margin-top:8px;color:var(--muted);font-size:12px">
+    Not: Tarayıcı otomatik oynatmayı kısıtlayabilir; eğer otomatik başlamazsa Oynat butonuna bas.
+  </div>
+  <!-- Gizli YouTube iframe konumu (JS ile oluşturuluyor). -->
+  <div id="ytContainer"></div>
+   <iframe 
+      id="youtubePlayer"
+      width="100%" 
+      height="0" 
+      src="https://www.youtube.com/embed/jfKfPfyJRdk?enablejsapi=1&autoplay=0" 
+      frameborder="0" 
+      allow="autoplay; encrypted-media" 
+      style="display:none;"
+    ></iframe>
+  </div>
+</div>
 
         <div class="card pad">
           <h3>Otopark Numarası</h3>
