--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
       
       <!-- Giriş yapmış kullanıcı butonu -->
       <div id="userButton" style="display: none;">
-        <button id="btnProfileHeader">Profilim</button>
+       <!-- Orijinal index.html'deki profil butonu -->
+<button id="btnProfileHeader" onclick="window.location.href='profile.html'">Profilim</button>
         <button id="btnLogout" class="danger">Çıkış yap</button>
       </div>
     </div>
