--- a/outfit.html
+++ b/outfit.html
@@ -2,9 +2,9 @@
   <h3>Günlük Kombin Tavsiyesi</h3>
   <div id="3dOutfit" style="width:100%; height:500px;"></div>
   <div class="outfit-controls" style="margin-top:10px;">
-    <button data-part="shirt" data-model="https://models.readyplayer.me/shirt.glb">Üstü Değiştir</button>
-    <button data-part="bottom" data-model="https://models.readyplayer.me/jeans.glb">Altı Değiştir</button>
-    <button data-part="shoes" data-model="https://models.readyplayer.me/shoes_black.glb">Ayakkabıyı Değiştir</button>
+    <button data-part="shirt" data-model="https://threejs.org/examples/models/gltf/Flamingo.glb">Üstü Değiştir</button>
+    <button data-part="bottom" data-model="https://threejs.org/examples/models/gltf/RobotExpressive/RobotExpressive.glb">Altı Değiştir</button>
+    <button data-part="shoes" data-model="https://threejs.org/examples/models/gltf/Horse.glb">Ayakkabıyı Değiştir</button>
   </div>
 </aside>
 
