--- a/index.html
+++ b/index.html
@@ -597,6 +597,82 @@
 
     // --- KOMBİN BÖLÜMÜ YÜKLEME ---
     function loadOutfitSection() {
+       document.getElementById('outfit-section').innerHTML = `
+    <aside class="card pad">
+      <h3>Günlük Kombin Tavsiyesi</h3>
+      <div id="3dOutfit" style="width:100%; height:500px; background: var(--card); border-radius: 8px; overflow: hidden;"></div>
+      <div class="outfit-info" style="margin-top: 16px;">
+        <div class="today-outfit" id="todayOutfit">
+          <h4>Bugünkü Kombin:</h4>
+          <ul>
+            <li><strong>Üst:</strong> <span id="outfitTop">-</span></li>
+            <li><strong>Alt:</strong> <span id="outfitBottom">-</span></li>
+            <li><strong>Ayakkabı:</strong> <span id="outfitShoes">-</span></li>
+            <li><strong>Aksesuar:</strong> <span id="outfitAccessory">-</span></li>
+          </ul>
+        </div>
+      </div>
+    </aside>
+  `;
+  
+  // 3D sahneyi başlat
+  init3DScene();
+}
+
+// 3D sahne fonksiyonlarını global yapalım
+let scene, camera, renderer, womanModel;
+
+function init3DScene() {
+  const container = document.getElementById('3dOutfit');
+  if (!container) return;
+  
+  // Sahne
+  scene = new THREE.Scene();
+  scene.background = new THREE.Color(0x151922);
+  
+  // Kamera
+  camera = new THREE.PerspectiveCamera(45, container.clientWidth / container.clientHeight, 0.1, 1000);
+  camera.position.set(0, 1, 3);
+  
+  // Renderer
+  renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+  renderer.setSize(container.clientWidth, container.clientHeight);
+  renderer.shadowMap.enabled = true;
+  container.appendChild(renderer.domElement);
+  
+  // Işıklar
+  const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
+  scene.add(ambientLight);
+  
+  const directionalLight = new THREE.DirectionalLight(0xffffff, 0.8);
+  directionalLight.position.set(5, 10, 7);
+  directionalLight.castShadow = true;
+  scene.add(directionalLight);
+  
+  // Basit kadın figürü oluştur
+  createWomanFigure();
+  
+  // Zemin
+  const floorGeometry = new THREE.PlaneGeometry(10, 10);
+  const floorMaterial = new THREE.MeshStandardMaterial({ 
+    color: 0x2b3240,
+    roughness: 0.8,
+    metalness: 0.2
+  });
+  const floor = new THREE.Mesh(floorGeometry, floorMaterial);
+  floor.rotation.x = -Math.PI / 2;
+  floor.receiveShadow = true;
+  scene.add(floor);
+  
+  // Animasyon
+  animate();
+  
+  // Responsive
+  window.addEventListener('resize', onWindowResize);
+  
+  // Günlük kombin yükle
+  loadTodayOutfit();
+}
       fetch('outfit.html')
         .then(response => response.text())
         .then(html => {
